Basic layout is ready

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Quiz</string>
+    <string name="question1">What is the name of this Monument?</string>
+    <string name="question2">What built this monument?</string>
+    <string name="question3">Where is this monument?</string>
+    <string name="question4">When was this monument built?</string>
+    <string name="question5">What is the name of this Monument?</string>
 </resources>
